Fix #2 for offscreen cancel/save buttons
Updated the swap cleared and flagged feature to use styling and code
organization that is more similar to the  YNAB core, fixing an issue
where the buttons could be positioned incorrectly. Fix for #119.

--- a/src/common/res/features/swap-cleared-flagged/main.css
+++ b/src/common/res/features/swap-cleared-flagged/main.css
@@ -1,15 +1,11 @@
-.ember-view.ynab-grid-actions.detached-attached {
-    position: inherit;
+.ynab-grid-body-row.is-editing {
+	background-color: #00596f !important;
 }
 
-.ember-view.ynab-grid-actions.detached-attached {
-    background: transparent;
+.ynab-grid-cell.ynab-grid-cell-flag {
+	position: relative;
 }
 
-.ember-view.ynab-grid-actions.detached-attached .button.button-cancel {
-    background: white;
-}
-
-.ember-view.ynab-grid-actions.detached-attached .button:hover {
-    background: #4d8f9f;
+.ynab-grid-cell.ynab-grid-cell-flag .ynab-grid-actions {
+	font-size: .875em;
 }
